[package]
name = "archery"
description = "Abstract over the atomicity of reference-counting pointers"
version = "1.0.1-pre"
authors = ["Diogo Sousa <diogogsousa@gmail.com>"]

edition = "2021"
rust-version = "1.60.0"

homepage = "https://github.com/orium/archery"
repository = "https://github.com/orium/archery"
documentation = "https://docs.rs/archery"
readme = "README.md"

keywords = [
    "rc",
    "arc",
    "reference-counting",
    "no_std"
]

categories = [
    "concurrency",
    "memory-management",
    "rust-patterns",
]

license = "MPL-2.0"

# What to include when packaging.
include = [
    "/src/**/*.rs",
    "/Cargo.toml",
    "/LICENSE.md",
    "/README.md",
    "/release-notes.md",
]

[badges]
codecov = { repository = "orium/archery", branch = "master", service = "github" }

[dependencies]
static_assertions = "1.1.0"
triomphe = { version = "0.1.9", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
pretty_assertions = "1.2.1"
compiletest_rs = "0.10.2"

[features]
fatal-warnings = []
triomphe = ["dep:triomphe"]

[[bench]]
name = "std_rc"
path = "benches/std_rc.rs"
harness = false

[[bench]]
name = "std_arc"
path = "benches/std_arc.rs"
harness = false

[[bench]]
name = "archery_shared_pointer_rc"
path = "benches/archery_shared_pointer_rc.rs"
harness = false

[[bench]]
name = "archery_shared_pointer_arc"
path = "benches/archery_shared_pointer_arc.rs"
harness = false

[[bench]]
name = "archery_shared_pointer_arct"
path = "benches/archery_shared_pointer_arct.rs"
harness = false
required-features = ["triomphe"]
